--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
 </head>
 <body>
     <h1>Star Wars <br> Quiz</h1>
+
+    <div class="container"> 
+        <div id="time"> 
+          
+            <span class="digit" id="sec"> 
+                60</span> 
+            <span class="txt">Sec</span> 
+            <span class="digit" id="count"> 
+                00</span> 
+        </div> 
+        <div id="buttons"> 
+            <button class="btn" id="start"> 
+                Start</button> 
+            <button class="btn" id="stop"> 
+                Stop</button> 
+            <button class="btn" id="reset"> 
+                Reset</button> 
+        </div> 
+    </div> 
+
     <script src="index.js"></script>
 </body>
 </html>
