--- a/index.html
+++ b/index.html
@@ -27,7 +27,19 @@
                 Reset</button> 
         </div> 
     </div> 
+    <div class="score">
+        <p>Score:</p>
+        <span id="scoreNum">00</span>
+    </div>
+    <div class="quiz">
+        <h4 id="question"></h4>
+        <ul>
+            <li id="op1"></li>
+            <li id="op2"></li>
+            <li id="op3"></li>
+        </ul>
+    </div>
 
-    <script src="index.js"></script>
+    <script  src="index.js"></script>
 </body>
 </html>
