--- a/index.html
+++ b/index.html
@@ -27,17 +27,13 @@
                 Reset</button> 
         </div> 
     </div> 
-    <div class="score">
+    <div id="score">
         <p>Score:</p>
         <span id="scoreNum">00</span>
     </div>
     <div class="quiz">
         <h4 id="question"></h4>
-        <ul>
-            <li id="op1"></li>
-            <li id="op2"></li>
-            <li id="op3"></li>
-        </ul>
+       
     </div>
 
     <script  src="index.js"></script>
