--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="time"> 
           
             <span class="digit" id="sec"> 
-                60</span> 
+                05</span> 
             <span class="txt">Sec</span> 
             <span class="digit" id="count"> 
                 00</span> 
@@ -26,15 +26,16 @@
             <button class="btn" id="reset"> 
                 Reset</button> 
         </div> 
-    </div> 
-    <div id="score">
+         <div id="score">
         <p>Score:</p>
         <span id="scoreNum">00</span>
-    </div>
-    <div class="quiz">
+        </div>
+    </div> 
+   
+    <!-- <div class="quiz">
         <h4 id="question"></h4>
        
-    </div>
+    </div> -->
 
     <script  src="index.js"></script>
 </body>
